--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,12 @@ ffmpeg-python
 gitpython
 hachoir
 heroku3
-httpx==0.27.0
+httpx==0.27.2
 motor
 pillow
 psutil
-py-tgcalls==0.9.7
+py-tgcalls
+ntgcalls
 pykeyboard
 pyrofork
 python-dotenv
